<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/createTournamentFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_create_tournament" />

        <item
            android:id="@+id/matchFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_match" />
        <item
        android:id="@+id/editTorunamentFragment"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="Modificar Torneo" />

        <item
            android:id="@+id/userFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Usuario" />
        <item
            android:id="@+id/rankingFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Rankings" />
        <item
            android:id="@+id/editInfoFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Editar Información" />

    </group>
</menu>



