<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/userName"
            android:layout_width="382dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/UserName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="380dp"
            android:layout_height="49dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/emailUser"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <EditText
            android:id="@+id/userApodo"
            android:layout_width="384dp"
            android:layout_height="45dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/userApodo"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.629"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmail" />

        <EditText
            android:id="@+id/userContraseña"
            android:layout_width="382dp"
            android:layout_height="45dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/userContraseña"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userApodo" />

        <EditText
            android:id="@+id/userContraseña2"
            android:layout_width="381dp"
            android:layout_height="47dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/userContraseña2"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userContraseña" />

        <EditText
            android:id="@+id/userLiga"
            android:layout_width="380dp"
            android:layout_height="47dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/userLiga"
            android:inputType="textNoSuggestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userContraseña2" />

        <EditText
            android:id="@+id/userCiudad"
            android:layout_width="380dp"
            android:layout_height="45dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/userCiudad"
            android:inputType="textNoSuggestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userLiga" />

        <EditText
            android:id="@+id/descripcionUser"
            android:layout_width="378dp"
            android:layout_height="108dp"
            android:layout_marginTop="28dp"
            android:clickable="true"
            android:ems="10"
            android:hint="@string/userDescripcion"
            android:inputType="textImeMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.593"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userCiudad" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="162dp"
            android:layout_height="39dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/saveButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>



</ScrollView>