<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tennistourcol.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tennistourcol.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tennistourcol.ui.slideshow.SlideshowFragment"
        android:label="Estadisticas"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/tournamentActivityFragment"
        android:name="com.tennistourcol.ui.MiTournaments.TournamentActivityFragment"
        android:label="Mis torneos" />

    <fragment
        android:id="@+id/createTournamentFragment"
        android:name="com.tennistourcol.ui.tournament.TournamentFragment"
        android:label="@string/menu_create_tournament"
        tools:layout="@layout/tournament_fragment" />
    <fragment
        android:id="@+id/matchFragment"
        android:name="com.tennistourcol.ui.match.MatchFragment"
        android:label="@string/menu_match"
        tools:layout="@layout/fragment_match" />
    <fragment
        android:id="@+id/editTorunamentFragment"
        android:name="com.tennistourcol.ui.tournament.EditTorunamentFragment"
        android:label="Modificar Torneo"
        tools:layout="@layout/fragment_edit_torunament" />
    <fragment
        android:id="@+id/rankingFragment"
        android:name="com.tennistourcol.ui.Ranking.RankingFragment"
        android:label="Ranking"
        tools:layout="@layout/fragment_ranking" />
    <fragment
        android:id="@+id/userFragment"
        android:name="com.tennistourcol.ui.User.UserFragment"
        android:label="User"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/editInfoFragment"
        android:name="com.tennistourcol.ui.User.EditInfoFragment"
        android:label="Editar Perfil"
        tools:layout="@layout/fragment_edit_info" />



</navigation>