<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Login">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/oxygen_light"
        android:text="Tennis Tour Col"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginMail"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:hint="@string/loginMail"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        android:textSize="24sp"
        android:textAlignment="center"

        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="234dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:hint="@string/loginPassword"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="312dp"
        android:text="¿Olvidaste tu contraseña?"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="236dp"
        android:fontFamily="@font/oxygen_bold"
        android:hint="@string/loginButton"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:text="¿No tienes cuenta?/Registrate aquí"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>